# blueprints

AI_multiagent_blogpost/: README.md  pyproject.toml  requirements.txt
AI_multiagent_blogpost/src/ai_multiagent_blogpost/: __init__.py  main.py
amazon-review-sentiment-analysis/: README.md  pyproject.toml
amazon-review-sentiment-analysis/src/amazon_review_sentiment_analysis/: __init__.py  main.py  reviews.txt
basic_travel_planner/: README.md  pyproject.toml
basic_travel_planner/src/basic_travel_planner/: __init__.py  main.py  tasks.py  utils.py  workflows.py
blog_post/: README.md  pyproject.toml
blog_post/src/blog_post/: __init__.py  main.py
multi_agent_blog_post/: README.md  pyproject.toml
multi_agent_blog_post/src/multi_agent_blog_post/: __init__.py  main.py
multi_agent_blog_post/src/multi_agent_blog_post/agents/: drafting_agent.py  editing_agent.py  research_agent.py  seo_agent.py
personalized_email/: README.md  pyproject.toml
personalized_email/src/personalized_email/: __init__.py  main.py  new_project_update.txt
resume_extraction/: README.md  pyproject.toml
resume_extraction/src/resume_extraction/: Lavanya (DevOps)_V.docx  __init__.py  main.py
simple-workflow/: README.md  pyproject.toml
simple-workflow/src/simple_workflow/: __init__.py  workflows.py
travel_planner/: README.md  pyproject.toml
travel_planner/src/travel_planner/: __init__.py  main_google_api.py  main_google_matrix.py  main_weather_api.py  main_weather_csv.py  models.py  weather1.py  weather_data.csv  (+1 more)
travel_planner_2.0/: README.md  pyproject.toml
(+14 files in other folders)
