[project]
name = "multi-agent-blog-post"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Manoj Naidu Yandrapu", email = "manojnaiduyandrapu@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent_blog_post"]
