[project]
name = "simple-workflow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Arun Reddy", email = "arunreddy.nelakurthi@gmail.com" }
]
dependencies = [
    "agentifyme>=0.0.24",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_workflow"]
